[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/gui/teamconfirm.gd" type="Script" id=1]
[ext_resource path="res://scenes/gui/pocket_tactics.tres" type="Theme" id=2]
[ext_resource path="res://gfx/menu_select_white.png" type="Texture" id=3]
[ext_resource path="res://scripts/focus.gd" type="Script" id=4]

[sub_resource type="ImageTexture" id=1]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 10, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 10, 10, 10 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 20, 10, 10 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="ImageTexture" id=6]

[sub_resource type="ImageTexture" id=7]

[node name="teamconfirm" type="Control"]
margin_right = 320.0
margin_bottom = 224.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Control" parent="."]
margin_left = 116.5
margin_top = 74.5
margin_right = 193.5
margin_bottom = 128.5
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="ColorRect" parent="panel"]
anchor_left = 0.578
anchor_top = 0.62
anchor_right = 0.578
anchor_bottom = 0.62
margin_left = -59.8596
margin_top = -43.0536
margin_right = 60.1404
margin_bottom = 37.9464
color = Color( 0.0627451, 0.0627451, 0.0705882, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="panel"]
margin_left = -4.0
margin_right = 94.0
margin_bottom = 13.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "Confirm team?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="panel"]
margin_left = -6.0
margin_top = 14.0
margin_right = 95.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shadow" type="Label" parent="panel"]
margin_left = 12.0
margin_top = 15.0
margin_right = 99.0
margin_bottom = 70.0
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_colors/font_color_shadow = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 0
custom_constants/shadow_offset_y = 1
text = "Check map
Edit team
Start level"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="check_map" type="ToolButton" parent="panel"]
margin_left = 3.0
margin_top = 19.0
margin_right = 89.0
margin_bottom = 40.0
focus_neighbour_bottom = NodePath("../edit_team")
focus_next = NodePath("../edit_team")
theme = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.92549, 0.878431, 1 )
text = "Check map"
icon = SubResource( 1 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="focus" type="AnimatedSprite" parent="panel/check_map"]
visible = false
position = Vector2( -4, 2 )
frames = SubResource( 5 )
frame = 2
playing = true
centered = false
offset = Vector2( 0, 2 )
script = ExtResource( 4 )

[node name="edit_team" type="ToolButton" parent="panel"]
margin_left = 3.0
margin_top = 32.0
margin_right = 89.0
margin_bottom = 53.0
focus_neighbour_top = NodePath("../check_map")
focus_neighbour_bottom = NodePath("../start_level")
focus_next = NodePath("../start_level")
focus_previous = NodePath("../check_map")
theme = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.92549, 0.878431, 1 )
text = "Edit team"
icon = SubResource( 6 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="focus" type="AnimatedSprite" parent="panel/edit_team"]
visible = false
position = Vector2( -4, 3 )
frames = SubResource( 5 )
playing = true
centered = false
offset = Vector2( 0, 2 )
script = ExtResource( 4 )

[node name="start_level" type="ToolButton" parent="panel"]
margin_left = 3.0
margin_top = 45.0
margin_right = 89.0
margin_bottom = 66.0
focus_neighbour_top = NodePath("../edit_team")
focus_previous = NodePath("../edit_team")
theme = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color = Color( 0.929412, 0.92549, 0.878431, 1 )
custom_colors/font_color_hover = Color( 0.0627451, 0.0627451, 0.0705882, 1 )
custom_colors/font_color_pressed = Color( 0.929412, 0.92549, 0.878431, 1 )
text = "Start level"
icon = SubResource( 7 )
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="focus" type="AnimatedSprite" parent="panel/start_level"]
visible = false
position = Vector2( -4, 3 )
frames = SubResource( 5 )
frame = 2
playing = true
centered = false
offset = Vector2( 0, 2 )
script = ExtResource( 4 )
